--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gamer Zone</title>
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/e6e76af3d6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -19,6 +20,11 @@
                     <li><a href="">About us</a></li>
                     <li><a href="">Developers</a></li>
                 </ul>
+                <button class="menus-btn">
+                    Follows Us On &nbsp;
+                    <i class="fa-brands fa-youtube fa-2xl" style="color: #f61c0d;"></i>
+                    <img src="./images/tik-tok 1.svg" alt="">
+                </button>
             </div>
         </nav>
     </header>
