--- a/index.html
+++ b/index.html
@@ -33,15 +33,21 @@
             <div class="banner-content">
                 <h3 class="banner-title">Play Like The</h3>
                 <h1 class="banner-title2">G.O.A.T.</h1>
-                <p class="banner-desc"><img src="./images/play.svg" alt="">1-Click instant play</p>
-                <p class="banner-desc"><img src="./images/download.svg" alt="">No Download</p>
-                <p class="banner-desc"><img src="./images/people.svg" alt="">1000s of supported online games</p>
+                <p class="banner-desc gray-text-color"><img src="./images/play.svg" alt="">1-Click instant play</p>
+                <p class="banner-desc gray-text-color"><img src="./images/download.svg" alt="">No Download</p>
+                <p class="banner-desc gray-text-color"><img src="./images/people.svg" alt="">1000s of supported online games</p>
                 <div class="banner-button-container">
                     <button class="btn-primary">Sign In</button>
                     <button class="btn-secondary">Go Rogue</button>
                 </div>
             </div>
-            <img class="banner-image" src="./images/Group 18.png" alt="">
+            <div class="banner-image">
+                <img src="./images/pngwing 1.png" alt="">
+                <div class="banner-image-double">
+                    <img class="pngwing2" src="./images/pngwing 2.png" alt="">
+                    <img  class="pngwing3" src="./images/pngwing 3.png" alt="">
+                </div>
+            </div>
         </section>
         
     </main>
