added Funny Videos Section and responsive style

--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
                 </div>
             </div>
         </section>
+        <section class="funny-videos-container section-padding">
+            <div class="funny-videos-content">
+                <h1 class="funny-videos-title"> Online Games <span>Funny Videos</span></h1>
+            <p class="funny-videos-desc gray-text-color">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="funny-videos-card-container">
+                <div class="funny-videos-card">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p class="funny-videos-card-desc gray-text-color">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="funny-videos-card">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p class="funny-videos-card-desc gray-text-color">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="funny-videos-card">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p class="funny-videos-card-desc gray-text-color">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="funny-videos-card">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p class="funny-videos-card-desc gray-text-color">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+            </div>
+        </section>
         
     </main>
     <footer>
