added Play Instantly section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- Navigation section -->
         <nav class="section-padding">
             <div class="logo-container">
                 <img src="./images/Frame.png" alt="">
@@ -29,6 +30,7 @@
         </nav>
     </header>
     <main>
+        <!-- Banner section -->
         <section class="banner-container section-padding">
             <div class="banner-content">
                 <h3 class="banner-title">Play Like The</h3>
@@ -49,6 +51,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Online Games Funny Videos section -->
         <section class="funny-videos-container section-padding">
             <div class="funny-videos-content">
                 <h1 class="funny-videos-title"> Online Games <span>Funny Videos</span></h1>
@@ -73,7 +77,18 @@
                 </div>
             </div>
         </section>
-        
+
+        <!-- Play Instantly section -->
+        <section class="play-instantly-container section-padding">
+            <div class="play-instantly-content">
+                <h1 class="play-instantly-title"><span>Play Instantly,</span> No Downloads No Installs.</h1>
+                <p class="play-instantly-desc gray-text-color">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-instantly-image">
+                <img src="./images/Rectangle 55.png" alt="" class="pi-image">
+                <img src="./images/Rectangle 66.png" alt="" class="pi-image2">
+            </div>
+        </section>
     </main>
     <footer>
 
