added Play Instantly section responsive done

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Play Instantly section -->
         <section class="play-instantly-container section-padding">
             <div class="play-instantly-content">
-                <h1 class="play-instantly-title"><span>Play Instantly,</span> No Downloads No Installs.</h1>
+                <h1 class="play-instantly-title"><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h1>
                 <p class="play-instantly-desc gray-text-color">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
             </div>
             <div class="play-instantly-image">
