added Games Button section done

--- a/index.html
+++ b/index.html
@@ -89,6 +89,50 @@
                 <img src="./images/Rectangle 66.png" alt="" class="pi-image2">
             </div>
         </section>
+
+        <!-- Games Button Section -->
+        <section class="games-button-container section-padding">
+            <div class="games-button-row row-1">
+                <button class="games-btn">
+                    <img src="./images/Rectangle 11.png" alt="">
+                    <p>Action Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 12.png" alt="">
+                    <p>Adventure Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 13.png" alt="">
+                    <p>Arcade Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 14.png" alt="">
+                    <p>Educational Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 15.png" alt="">
+                    <p>Word Games</p> 
+                </button>
+            </div>
+            <div class="games-button-row">
+                <button class="games-btn">
+                    <img src="./images/Rectangle 16.png" alt="">
+                    <p>Action Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 17.png" alt="">
+                    <p>Adventure Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 18.png" alt="">
+                    <p>Arcade Games</p> 
+                </button>
+                <button class="games-btn">
+                    <img src="./images/Rectangle 19.png" alt="">
+                    <p>Educational Games</p> 
+                </button>
+            </div>
+        </section>
     </main>
     <footer>
 
