added Footer section responsive done

--- a/index.html
+++ b/index.html
@@ -135,7 +135,36 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footer-logo-container">
+            <img src="./images/Frame.png" alt="">
+            <h1 class="footer-logo-text"><span>G</span>amer</h1>
+        </div>
+        <div class="footer-menus">
+            <ul>
+                <li><a href="">Our Story</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="">Web Games</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">My Account</a></li>
+            </ul>
+        </div>
+        <div class="social-logo">
+            <img src="./images/twitter 1.svg" alt="">
+            <img src="./images/facebook 1.svg" alt="">
+            <img src="./images/youtube.svg" alt="">
+            <img src="./images/linkedin 1.svg" alt="">
+            <img src="./images/instagram 1.svg" alt="">
+        </div>
+        <div class="terms-menus">
+            <ul>
+                <li><a href="">Terms and Conditions</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Cookie Policy</a></li>
+                <li><a href="">Privacy Settings</a></li>
+            </ul>
+        </div>
+        <div class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</div>
     </footer>
 </body>
 </html>
