button cursor pointer added done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <p>Word Games</p> 
                 </button>
             </div>
-            <div class="games-button-row">
+            <div class="games-button-row row-2">
                 <button class="games-btn">
                     <img src="./images/Rectangle 16.png" alt="">
                     <p>Action Games</p> 
